# backrustgnx

./: Cargo.toml
migrations/: 20260310182815_crea_tabla_usuarios.sql
src/: main.rs
src/database/: mod.rs  rol.rs  usuario.rs
src/graphql/: mod.rs  query.rs
src/handlers/: graphql.rs
